--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  "homepage": "https://mag-roh.github.io/spotify-clone",
   "name": "spotify-clone-app",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +50,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13"
+    "@types/react-dom": "^18.2.13",
+    "gh-pages": "^6.0.0"
   }
 }
