--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "https://mag-roh.github.io/spotify-clone",
+  "homepage": ".",
   "name": "spotify-clone-app",
   "version": "0.1.0",
   "private": true,
